# C_exercices

./: CMakeLists.txt  README.md  stdio.h.gcov  tictactoe.c  tictactoe.h  ttt_save_data.txt  ttt_test-ttt_test.gcda  ttt_test-ttt_test.gcno  ttt_test-ttt_without_main.gcda  ttt_test-ttt_without_main.gcno  ttt_test.c  ttt_without_main.c  ttt_without_main.c.gcov
tictactoe/: tic.c
